crates/rattler/src/install/prefix_replacement/snapshots/rattler__install__prefix_replacement__tests__replace_long_prefix_in_text_file_offsets.snap
---
source: crates/rattler/src/install/prefix_replacement/tests.rs
assertion_line: 1427
expression: replaced
---
#!/usr/bin/env executable -m 123123

# just a comment

import sys
import re

main(...)

