crates/rattler/src/install/prefix_replacement/snapshots/rattler__install__prefix_replacement__tests__replace_python_shebang-2.snap
---
source: crates/rattler/src/install/prefix_replacement/tests.rs
expression: replaced
---
#!/bin/sh
'''exec' "/new/prefix/with spaces/bin/python3.12" -x 123 "$0" "$@" #'''
