crates/rattler/src/install/prefix_replacement/snapshots/rattler__install__prefix_replacement__tests__replace_python_shebang.snap
---
source: crates/rattler/src/install/prefix_replacement/tests.rs
expression: replaced
---
#!/bin/sh
'''exec' "/new/prefix/with spaces/bin/python3.12" "$0" "$@" #'''
